[gd_scene load_steps=5 format=3 uid="uid://f2wobln3gv8g"]

[ext_resource type="Script" uid="uid://bnee8638le068" path="res://scripts/screens/task_screen.gd" id="1_ga4ux"]
[ext_resource type="PackedScene" uid="uid://ng6j4mjp362o" path="res://scenes/figure_environment.tscn" id="2_4ndmo"]
[ext_resource type="Texture2D" uid="uid://benixub5eg7nq" path="res://assets/gear_icon.tres" id="3_vj163"]

[sub_resource type="Environment" id="Environment_ga4ux"]
background_mode = 1
background_color = Color(0.24313726, 0.24313726, 0.29803923, 1)

[node name="TaskScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
script = ExtResource("1_ga4ux")
metadata/_custom_type_script = "uid://chan7lqvx204"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShapeViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="ShapeViewport" type="SubViewport" parent="HBoxContainer/ShapeViewportContainer"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(958, 1080)
render_target_update_mode = 4

[node name="TaskEnvironment" parent="HBoxContainer/ShapeViewportContainer/ShapeViewport" instance=ExtResource("2_4ndmo")]
environment = SubResource("Environment_ga4ux")

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
focus_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"BigLabel"
text = "Task Data"

[node name="SettingsButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Settings"
theme_type_variation = &"SettingsButton"
icon = ExtResource("3_vj163")

[node name="TaskDataGrid" type="GridContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="StepNavHbox" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox"]
layout_mode = 2
disabled = true
text = "< Prev"

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox"]
layout_mode = 2
disabled = true
text = "Next >"

[node name="StepsScroll" type="ScrollContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
draw_focus_border = true

[node name="StepsVBox" type="VBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/StepsScroll"]
layout_mode = 2
size_flags_vertical = 0

[node name="CheckAnswerButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Check answer"

[node name="FinalLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Task complete!"

[node name="NewTaskButton" type="Button" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Get new task"

[node name="TipPopup" type="PopupPanel" parent="."]
oversampling_override = 1.0

[node name="TipLabel" type="Label" parent="TipPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
horizontal_alignment = 1

[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox/PrevButton" to="." method="_on_prev_step_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/StepNavHbox/NextButton" to="." method="_on_next_step_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/CheckAnswerButton" to="." method="_on_check_answer_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/VBoxContainer/NewTaskButton" to="." method="_on_new_task_button_pressed"]
